<?xml version="1.0" encoding="utf-8"?>
    <navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_main">

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.wingsmight.audiorecorder.ui.main.MainFragment"
        android:label="@string/title_main_tab"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.wingsmight.audiorecorder.ui.settings.SettingsFragment"
        android:label="@string/title_settings_tab"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_records"
        android:name="com.wingsmight.audiorecorder.ui.records.RecordsFragment"
        android:label="@string/title_records_tab"
        tools:layout="@layout/fragment_records" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.wingsmight.audiorecorder.ui.settings.SettingsPreferencesFragment"
        android:label="SettingsFragment" />
</navigation>