<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <PreferenceCategory app:title="Профиль">

        <Preference
            app:key="userFullName"
            app:selectable="false"
            app:title="Username Usersurname"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true"
            />

        <Preference
            app:key="email"
            app:selectable="false"
            app:title="Почта"
            app:summary="test@test.com"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true"
            />

        <Preference
            app:key="logout"
            app:layout="@layout/logout_button"
            app:selectable="false"
            app:iconSpaceReserved="false"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="Опции">

        <Preference
            app:title="Не записывать в"
            app:summary="22:00 - 8:00"
            app:key="doNotDisturbInterval"
            app:layout="@layout/do_not_disturb_button"
            />

        <SwitchPreferenceCompat
            app:key="recordByVoice"
            app:title="Включение записи по голосу"
            app:iconSpaceReserved="false"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="Внешний вид">

        <ListPreference
            app:defaultValue="@string/pf_dark_auto"
            app:dialogTitle="@string/pf_dark_dialog"
            app:entries="@array/light_theme"
            app:entryValues="@array/light_theme_value"
            app:key="@string/themeModeListKey"
            app:summary="@string/pf_content_message"
            app:title="@string/pf_light_title"
            app:iconSpaceReserved="false"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="Облако">

        <Preference
            app:key="cloudSize"
            app:title="34 kB  /   2 GB"
            app:selectable="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true"
            />


        <Preference
            app:key="cloudType"
            app:title="Размер облака"
            app:selectable="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true"
            />

    </PreferenceCategory>


    <PreferenceCategory app:title="Справка">

        <Preference
            app:key="appInfo"
            app:title="О принципах работы приложения"
            app:layout="@layout/app_info_button"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="Контакты">

        <Preference
            app:key="contactEmal"
            app:title="Почта"
            app:summary="azzifastgames@gmail.com"
            app:iconSpaceReserved="false"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="Другое"
        >

        <Preference
            app:key="donat"
            app:title="Поблагодарить разработчика"
            app:selectable="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="">

        <Preference
            app:key="blank"
            app:title=" "
            app:selectable="false"
            app:iconSpaceReserved="false"
            app:singleLineTitle="true"
            />

    </PreferenceCategory>


</PreferenceScreen>